--- a/style.css
+++ b/style.css
@@ -597,28 +597,61 @@ body {
 }
 
 footer {
-  content: '';
-  background: rgba(0, 0, 0, 0.963);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  background: url('https://www.sistecgn.ac.in/assets/web/images/footer/footer-bg-2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 60px 0 0;
   height: 100vh;
-  z-index: 1;
+  position: relative;
 }
 
 footer::before {
-  background: url('https://www.sistecgn.ac.in/assets/web/images/footer/footer-bg-2.jpg');
-  height: 100vh;
-  position: relative;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .92);
+  z-index: 0;
 }
 
 .footer-heading {
   text-transform: uppercase;
   color: #fe553c;
+  font-size: 18px;
+  font-weight: 600;
 }
 
-footer.container {
+.ftr-ctn {
   position: relative;
-  z-index: 2;
+}
+
+.ftr-show p {
+  color: #fff;
+}
+
+.ftr-show span {
+  color: #fe553c;
+}
+
+.ftr-show {
+  display: flex;
+  gap: 5px;
+  height: 100%;
+}
+
+.enterprises {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  align-items: start;
+}
+
+.enterprises ul {
+  list-style: none;
+  margin-bottom: 0;
+  padding: 0;
+  font-weight: 500;
+  color: #fff;
 }
